l22/l22_parser.output
Terminals unused in grammar

    tPRIVATE
    tIFX


State 12 conflicts: 1 shift/reduce
State 38 conflicts: 1 shift/reduce
State 51 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce
State 62 conflicts: 2 shift/reduce
State 65 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce
State 172 conflicts: 1 shift/reduce
State 178 conflicts: 1 shift/reduce
State 184 conflicts: 2 reduce/reduce
State 197 conflicts: 1 shift/reduce


Grammar

    0 $accept: file $end

    1 file: opt_decs
    2     | opt_decs program

    3 program: tBEGIN block ';' tEND

    4 opt_decs: %empty
    5         | declarations

    6 declarations: declaration
    7             | declarations declaration

    8 declaration: tUSE data_type tIDENTIFIER ';'
    9            | tUSE data_type tIDENTIFIER
   10            | tPUBLIC data_type tIDENTIFIER ';'
   11            | tPUBLIC data_type tIDENTIFIER
   12            | tPUBLIC data_type tIDENTIFIER '=' initializer ';'
   13            | tPUBLIC data_type tIDENTIFIER '=' initializer
   14            | tPUBLIC tTYPE_VAR tIDENTIFIER '=' initializer ';'
   15            | tPUBLIC tTYPE_VAR tIDENTIFIER '=' initializer
   16            | tPUBLIC tIDENTIFIER '=' initializer ';'
   17            | tPUBLIC tIDENTIFIER '=' initializer
   18            | tTYPE_VAR tIDENTIFIER '=' initializer ';'
   19            | tTYPE_VAR tIDENTIFIER '=' initializer
   20            | data_type tIDENTIFIER ';'
   21            | data_type tIDENTIFIER
   22            | data_type tIDENTIFIER '=' initializer ';'
   23            | data_type tIDENTIFIER '=' initializer
   24            | tFOREIGN function_type tIDENTIFIER ';'
   25            | tFOREIGN function_type tIDENTIFIER

   26 initializer: expression
   27            | fundef

   28 opt_data_types: %empty
   29               | data_types

   30 data_types: data_type
   31           | data_types ',' data_type

   32 data_type: basic_type
   33          | function_type

   34 basic_type: tTYPE_TEXT
   35           | tTYPE_INT
   36           | tTYPE_DOUBLE
   37           | tTYPE_VOID
   38           | '[' basic_type ']'

   39 function_type: data_type '<' opt_data_types '>'

   40 fundef: '(' opt_argdecs ')' tRETTYPE data_type ':' block ';'

   41 opt_argdecs: %empty
   42            | argdecs

   43 argdecs: argdec
   44        | argdecs ',' argdec

   45 argdec: data_type tIDENTIFIER

   46 block: '{' opt_decs opt_instrs '}'

   47 opt_instrs: %empty
   48           | instructions

   49 instructions: instruction ';'
   50             | instructions instruction ';'
   51             | no_semi_colon_instr
   52             | instructions no_semi_colon_instr

   53 instruction: tWHILE '(' expression ')' tDO block
   54            | expression
   55            | tWRITE expressions
   56            | tWRITELN expressions
   57            | tAGAIN
   58            | tSTOP
   59            | tRETURN
   60            | tRETURN expression
   61            | tRETURN fundef
   62            | block

   63 no_semi_colon_instr: tIF '(' expression ')' tTHEN block ';'
   64                    | tIF '(' expression ')' tTHEN block ';' elif
   65                    | lvalue '=' fundef
   66                    | lvalue '=' expression

   67 elif: tELSE block ';'
   68     | tELIF '(' expression ')' tTHEN block ';'
   69     | tELIF '(' expression ')' tTHEN block ';' elif

   70 lvalue: tIDENTIFIER
   71       | lvalue '[' expression ']'
   72       | '(' expression ')' '[' expression ']'
   73       | tIDENTIFIER '(' opt_args ')' '[' expression ']'
   74       | '(' fundef ')' '(' opt_args ')' '[' expression ']'
   75       | '@' '(' opt_args ')' '[' expression ']'

   76 opt_args: %empty
   77         | args

   78 args: expression
   79     | fundef
   80     | args ',' expression
   81     | args ',' fundef

   82 expressions: expression
   83            | expressions ',' expression

   84 expression: integer
   85           | double
   86           | text
   87           | tNULL
   88           | lvalue
   89           | lvalue '=' expression
   90           | lvalue '=' fundef
   91           | expression '+' expression
   92           | expression '-' expression
   93           | expression '*' expression
   94           | expression '/' expression
   95           | expression '%' expression
   96           | expression '<' expression
   97           | expression tLE expression
   98           | expression tEQ expression
   99           | expression tGE expression
  100           | expression '>' expression
  101           | expression tNE expression
  102           | expression tAND expression
  103           | expression tOR expression
  104           | '-' expression
  105           | '+' expression
  106           | tNOT expression
  107           | tINPUT
  108           | tIDENTIFIER '(' opt_args ')'
  109           | '(' fundef ')' '(' opt_args ')'
  110           | '@' '(' opt_args ')'
  111           | tSIZEOF '(' expression ')'
  112           | '(' expression ')'
  113           | '[' expression ']'
  114           | lvalue '?'

  115 integer: tINTEGER

  116 double: tDOUBLE

  117 text: tTEXT
  118     | text tTEXT


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 95
    '(' (40) 40 53 63 64 68 69 72 73 74 75 108 109 110 111 112
    ')' (41) 40 53 63 64 68 69 72 73 74 75 108 109 110 111 112
    '*' (42) 93
    '+' (43) 91 105
    ',' (44) 31 44 80 81 83
    '-' (45) 92 104
    '/' (47) 94
    ':' (58) 40
    ';' (59) 3 8 10 12 14 16 18 20 22 24 40 49 50 63 64 67 68 69
    '<' (60) 39 96
    '=' (61) 12 13 14 15 16 17 18 19 22 23 65 66 89 90
    '>' (62) 39 100
    '?' (63) 114
    '@' (64) 75 110
    '[' (91) 38 71 72 73 74 75 113
    ']' (93) 38 71 72 73 74 75 113
    '{' (123) 46
    '}' (125) 46
    error (256)
    tAND (258) 102
    tOR (259) 103
    tNE (260) 101
    tLE (261) 97
    tGE (262) 99
    tEQ (263) 98
    tNOT (264) 106
    tSIZEOF (265) 111
    tINPUT (266) 107
    tWRITE (267) 55
    tWRITELN (268) 56
    tPUBLIC (269) 10 11 12 13 14 15 16 17
    tUSE (270) 8 9
    tFOREIGN (271) 24 25
    tPRIVATE (272)
    tTYPE_VAR (273) 14 15 18 19
    tTYPE_INT (274) 35
    tTYPE_DOUBLE (275) 36
    tTYPE_TEXT (276) 34
    tTYPE_VOID (277) 37
    tRETTYPE (278) 40
    tIF (279) 63 64
    tTHEN (280) 63 64 68 69
    tELIF (281) 68 69
    tELSE (282) 67
    tWHILE (283) 53
    tDO (284) 53
    tBEGIN (285) 3
    tEND (286) 3
    tSTOP (287) 58
    tAGAIN (288) 57
    tRETURN (289) 59 60 61
    tIFX (290)
    tINTEGER <i> (291) 115
    tDOUBLE <d> (292) 116
    tIDENTIFIER <s> (293) 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 45 70 73 108
    tTEXT <s> (294) 117 118
    tNULL <expression> (295) 87
    tUNARY (296)


Nonterminals, with rules where they appear

    $accept (61)
        on left: 0
    file <sequence> (62)
        on left: 1 2
        on right: 0
    program <node> (63)
        on left: 3
        on right: 2
    opt_decs <sequence> (64)
        on left: 4 5
        on right: 1 2 46
    declarations <sequence> (65)
        on left: 6 7
        on right: 5 7
    declaration <node> (66)
        on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25
        on right: 6 7
    initializer <expression> (67)
        on left: 26 27
        on right: 12 13 14 15 16 17 18 19 22 23
    opt_data_types <types> (68)
        on left: 28 29
        on right: 39
    data_types <types> (69)
        on left: 30 31
        on right: 29 31
    data_type <type> (70)
        on left: 32 33
        on right: 8 9 10 11 12 13 20 21 22 23 30 31 39 40 45
    basic_type <type> (71)
        on left: 34 35 36 37 38
        on right: 32 38
    function_type <type> (72)
        on left: 39
        on right: 24 25 33
    fundef <expression> (73)
        on left: 40
        on right: 27 61 65 74 79 81 90 109
    opt_argdecs <sequence> (74)
        on left: 41 42
        on right: 40
    argdecs <sequence> (75)
        on left: 43 44
        on right: 42 44
    argdec <node> (76)
        on left: 45
        on right: 43 44
    block <block> (77)
        on left: 46
        on right: 3 40 53 62 63 64 67 68 69
    opt_instrs <sequence> (78)
        on left: 47 48
        on right: 46
    instructions <sequence> (79)
        on left: 49 50 51 52
        on right: 48 50 52
    instruction <node> (80)
        on left: 53 54 55 56 57 58 59 60 61 62
        on right: 49 50
    no_semi_colon_instr <node> (81)
        on left: 63 64 65 66
        on right: 51 52
    elif <node> (82)
        on left: 67 68 69
        on right: 64 69
    lvalue <lvalue> (83)
        on left: 70 71 72 73 74 75
        on right: 65 66 71 88 89 90 114
    opt_args <sequence> (84)
        on left: 76 77
        on right: 73 74 75 108 109 110
    args <sequence> (85)
        on left: 78 79 80 81
        on right: 77 80 81
    expressions <sequence> (86)
        on left: 82 83
        on right: 55 56 83
    expression <expression> (87)
        on left: 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114
        on right: 26 53 54 60 63 64 66 68 69 71 72 73 74 75 78 80 82 83 89 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 111 112 113
    integer <expression> (88)
        on left: 115
        on right: 84
    double <expression> (89)
        on left: 116
        on right: 85
    text <s> (90)
        on left: 117 118
        on right: 86 118


State 0

    0 $accept: . file $end

    tPUBLIC       shift, and go to state 1
    tUSE          shift, and go to state 2
    tFOREIGN      shift, and go to state 3
    tTYPE_VAR     shift, and go to state 4
    tTYPE_INT     shift, and go to state 5
    tTYPE_DOUBLE  shift, and go to state 6
    tTYPE_TEXT    shift, and go to state 7
    tTYPE_VOID    shift, and go to state 8
    '['           shift, and go to state 9

    $default  reduce using rule 4 (opt_decs)

    file           go to state 10
    opt_decs       go to state 11
    declarations   go to state 12
    declaration    go to state 13
    data_type      go to state 14
    basic_type     go to state 15
    function_type  go to state 16


State 1

   10 declaration: tPUBLIC . data_type tIDENTIFIER ';'
   11            | tPUBLIC . data_type tIDENTIFIER
   12            | tPUBLIC . data_type tIDENTIFIER '=' initializer ';'
   13            | tPUBLIC . data_type tIDENTIFIER '=' initializer
   14            | tPUBLIC . tTYPE_VAR tIDENTIFIER '=' initializer ';'
   15            | tPUBLIC . tTYPE_VAR tIDENTIFIER '=' initializer
   16            | tPUBLIC . tIDENTIFIER '=' initializer ';'
   17            | tPUBLIC . tIDENTIFIER '=' initializer

    tTYPE_VAR     shift, and go to state 17
    tTYPE_INT     shift, and go to state 5
    tTYPE_DOUBLE  shift, and go to state 6
    tTYPE_TEXT    shift, and go to state 7
    tTYPE_VOID    shift, and go to state 8
    tIDENTIFIER   shift, and go to state 18
    '['           shift, and go to state 9

    data_type      go to state 19
    basic_type     go to state 15
    function_type  go to state 16


State 2

    8 declaration: tUSE . data_type tIDENTIFIER ';'
    9            | tUSE . data_type tIDENTIFIER

    tTYPE_INT     shift, and go to state 5
    tTYPE_DOUBLE  shift, and go to state 6
    tTYPE_TEXT    shift, and go to state 7
    tTYPE_VOID    shift, and go to state 8
    '['           shift, and go to state 9

    data_type      go to state 20
    basic_type     go to state 15
    function_type  go to state 16


State 3

   24 declaration: tFOREIGN . function_type tIDENTIFIER ';'
   25            | tFOREIGN . function_type tIDENTIFIER

    tTYPE_INT     shift, and go to state 5
    tTYPE_DOUBLE  shift, and go to state 6
    tTYPE_TEXT    shift, and go to state 7
    tTYPE_VOID    shift, and go to state 8
    '['           shift, and go to state 9

    data_type      go to state 21
    basic_type     go to state 15
    function_type  go to state 22


State 4

   18 declaration: tTYPE_VAR . tIDENTIFIER '=' initializer ';'
   19            | tTYPE_VAR . tIDENTIFIER '=' initializer

    tIDENTIFIER  shift, and go to state 23


State 5

   35 basic_type: tTYPE_INT .

    $default  reduce using rule 35 (basic_type)


State 6

   36 basic_type: tTYPE_DOUBLE .

    $default  reduce using rule 36 (basic_type)


State 7

   34 basic_type: tTYPE_TEXT .

    $default  reduce using rule 34 (basic_type)


State 8

   37 basic_type: tTYPE_VOID .

    $default  reduce using rule 37 (basic_type)


State 9

   38 basic_type: '[' . basic_type ']'

    tTYPE_INT     shift, and go to state 5
    tTYPE_DOUBLE  shift, and go to state 6
    tTYPE_TEXT    shift, and go to state 7
    tTYPE_VOID    shift, and go to state 8
    '['           shift, and go to state 9

    basic_type  go to state 24


State 10

    0 $accept: file . $end

    $end  shift, and go to state 25


State 11

    1 file: opt_decs .
    2     | opt_decs . program

    tBEGIN  shift, and go to state 26

    $default  reduce using rule 1 (file)

    program  go to state 27


State 12

    5 opt_decs: declarations .
    7 declarations: declarations . declaration

    tPUBLIC       shift, and go to state 1
    tUSE          shift, and go to state 2
    tFOREIGN      shift, and go to state 3
    tTYPE_VAR     shift, and go to state 4
    tTYPE_INT     shift, and go to state 5
    tTYPE_DOUBLE  shift, and go to state 6
    tTYPE_TEXT    shift, and go to state 7
    tTYPE_VOID    shift, and go to state 8
    '['           shift, and go to state 9

    '['       [reduce using rule 5 (opt_decs)]
    $default  reduce using rule 5 (opt_decs)

    declaration    go to state 28
    data_type      go to state 14
    basic_type     go to state 15
    function_type  go to state 16


State 13

    6 declarations: declaration .

    $default  reduce using rule 6 (declarations)


State 14

   20 declaration: data_type . tIDENTIFIER ';'
   21            | data_type . tIDENTIFIER
   22            | data_type . tIDENTIFIER '=' initializer ';'
   23            | data_type . tIDENTIFIER '=' initializer
   39 function_type: data_type . '<' opt_data_types '>'

    tIDENTIFIER  shift, and go to state 29
    '<'          shift, and go to state 30


State 15

   32 data_type: basic_type .

    $default  reduce using rule 32 (data_type)


State 16

   33 data_type: function_type .

    $default  reduce using rule 33 (data_type)


State 17

   14 declaration: tPUBLIC tTYPE_VAR . tIDENTIFIER '=' initializer ';'
   15            | tPUBLIC tTYPE_VAR . tIDENTIFIER '=' initializer

    tIDENTIFIER  shift, and go to state 31


State 18

   16 declaration: tPUBLIC tIDENTIFIER . '=' initializer ';'
   17            | tPUBLIC tIDENTIFIER . '=' initializer

    '='  shift, and go to state 32


State 19

   10 declaration: tPUBLIC data_type . tIDENTIFIER ';'
   11            | tPUBLIC data_type . tIDENTIFIER
   12            | tPUBLIC data_type . tIDENTIFIER '=' initializer ';'
   13            | tPUBLIC data_type . tIDENTIFIER '=' initializer
   39 function_type: data_type . '<' opt_data_types '>'

    tIDENTIFIER  shift, and go to state 33
    '<'          shift, and go to state 30


State 20

    8 declaration: tUSE data_type . tIDENTIFIER ';'
    9            | tUSE data_type . tIDENTIFIER
   39 function_type: data_type . '<' opt_data_types '>'

    tIDENTIFIER  shift, and go to state 34
    '<'          shift, and go to state 30


State 21

   39 function_type: data_type . '<' opt_data_types '>'

    '<'  shift, and go to state 30


State 22

   24 declaration: tFOREIGN function_type . tIDENTIFIER ';'
   25            | tFOREIGN function_type . tIDENTIFIER
   33 data_type: function_type .

    tIDENTIFIER  shift, and go to state 35

    $default  reduce using rule 33 (data_type)


State 23

   18 declaration: tTYPE_VAR tIDENTIFIER . '=' initializer ';'
   19            | tTYPE_VAR tIDENTIFIER . '=' initializer

    '='  shift, and go to state 36


State 24

   38 basic_type: '[' basic_type . ']'

    ']'  shift, and go to state 37


State 25

    0 $accept: file $end .

    $default  accept


State 26

    3 program: tBEGIN . block ';' tEND

    '{'  shift, and go to state 38

    block  go to state 39


State 27

    2 file: opt_decs program .

    $default  reduce using rule 2 (file)


State 28

    7 declarations: declarations declaration .

    $default  reduce using rule 7 (declarations)


State 29

   20 declaration: data_type tIDENTIFIER . ';'
   21            | data_type tIDENTIFIER .
   22            | data_type tIDENTIFIER . '=' initializer ';'
   23            | data_type tIDENTIFIER . '=' initializer

    '='  shift, and go to state 40
    ';'  shift, and go to state 41

    $default  reduce using rule 21 (declaration)


State 30

   39 function_type: data_type '<' . opt_data_types '>'

    tTYPE_INT     shift, and go to state 5
    tTYPE_DOUBLE  shift, and go to state 6
    tTYPE_TEXT    shift, and go to state 7
    tTYPE_VOID    shift, and go to state 8
    '['           shift, and go to state 9

    $default  reduce using rule 28 (opt_data_types)

    opt_data_types  go to state 42
    data_types      go to state 43
    data_type       go to state 44
    basic_type      go to state 15
    function_type   go to state 16


State 31

   14 declaration: tPUBLIC tTYPE_VAR tIDENTIFIER . '=' initializer ';'
   15            | tPUBLIC tTYPE_VAR tIDENTIFIER . '=' initializer

    '='  shift, and go to state 45


State 32

   16 declaration: tPUBLIC tIDENTIFIER '=' . initializer ';'
   17            | tPUBLIC tIDENTIFIER '=' . initializer

    tNOT         shift, and go to state 46
    tSIZEOF      shift, and go to state 47
    tINPUT       shift, and go to state 48
    tINTEGER     shift, and go to state 49
    tDOUBLE      shift, and go to state 50
    tIDENTIFIER  shift, and go to state 51
    tTEXT        shift, and go to state 52
    tNULL        shift, and go to state 53
    '+'          shift, and go to state 54
    '-'          shift, and go to state 55
    '['          shift, and go to state 56
    '('          shift, and go to state 57
    '@'          shift, and go to state 58

    initializer  go to state 59
    fundef       go to state 60
    lvalue       go to state 61
    expression   go to state 62
    integer      go to state 63
    double       go to state 64
    text         go to state 65


State 33
